update robot template

--- a/algo_trading_notes/L1.ipynb
+++ b/algo_trading_notes/L1.ipynb
@@ -7,6 +7,44 @@
    "source": [
     "# Market Microstructure"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bfb6f7a",
+   "metadata": {},
+   "source": [
+    "Four things need to be determined for a trade:\n",
+    "- who trades\n",
+    "- at what price the trade occurs\n",
+    "- how many units are traded\n",
+    "- what happens if there is excess units in the order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b92dc0cf",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Terms in trade\n",
+    "- settled balance: how much assests you own (regardless whether it is in your pocket or in the order book)\n",
+    "- avaliable balance: how much assests in your pocket\n",
+    "- short selling: borrow an asset and sell it to get currency (need to pay divdend of the asset + interest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5e93e51",
+   "metadata": {},
+   "source": [
+    "Market\n",
+    "- A market features an order book, order form, and trade history where you can buy and sell units of assets"
+   ]
   }
  ],
  "metadata": {
