--- a/algo_trading_notes/L1.ipynb
+++ b/algo_trading_notes/L1.ipynb
@@ -140,7 +140,7 @@
     "- **Limit sell order:** \n",
     "    - placing an order of want to sell X shares at P per share or above\n",
     "- **Market sell order:** \n",
-    "    - placing an order of want to sell 100 shares, at any price\n",
+    "    - placing an order of want to sell X shares, at any price\n",
     "- In industry there are many more order types"
    ]
   },
